# Neo

./: .gitignore  CMakeLists.txt  Makefile  build.sh  buildenv.sh  qemu.sh
buildenv/: Dockerfile
scripts/: build.sh  buildenv.sh  run-i686.sh
src/impl/kernel/: main.c
src/impl/kernel/io/: print.c  print.h
src/impl/x86_64/: print.c
src/impl/x86_64/boot/: main.asm  main64.asm
src/intf/: print.h
src/kernel/: kernel.cpp
src/kernel/io/: print.cpp  print.h
src/linker/: linker.ld
targets/i686/iso/boot/grub/: grub.cfg
targets/x86_64/iso/boot/grub/: grub.cfg
